# billion-dollars-startup

./: .gitignore  README.md
pacifor-ai/: .env.example  README.md  pyproject.toml
pacifor-ai/src/pacifor/: main.py
pacifor-ai/src/pacifor/agents/: __init__.py  graph.py  guards.py  hitl.py  state.py
pacifor-ai/src/pacifor/agents/nodes/: __init__.py  executor.py  planner.py  reviewer.py
pacifor-ai/src/pacifor/api/: deps.py  errors.py
pacifor-ai/src/pacifor/api/routes/: __init__.py  audit.py  hitl.py  kill_switch.py  runs.py
pacifor-ai/src/pacifor/api/schemas/: audit.py  hitl.py  runs.py
pacifor-ai/src/pacifor/core/: audit.py  config.py  db.py  exceptions.py  hashing.py  kill_switch.py  redis_client.py
pacifor-ai/src/pacifor/models/: __init__.py  audit_entry.py  base.py  hitl_review.py  kill_event.py  run.py
pacifor-ai/src/pacifor/services/: hitl_service.py  kill_service.py  run_service.py
pacifor-ai/tests/: conftest.py
pacifor-ai/tests/integration/: test_kill_api.py  test_runs_api.py
pacifor-ai/tests/unit/: test_audit.py  test_graph.py  test_guards.py  test_hitl.py  test_kill_switch.py
